fix java linter for java>=16